--- a/SpanishAcademy/Views/Home/pv_children.cshtml
+++ b/SpanishAcademy/Views/Home/pv_children.cshtml
@@ -10,6 +10,9 @@
                     Because the children doesn´t learn languages in the same way as we do, we designed courses specially adapted to teach
                     your kids through games, songs and interacting with them only using Spanish from a born native spanish teacher.
                 </p>
+                <p class="text-red small mb-3">
+                    Contact for prices
+                </p>
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
