--- a/SpanishAcademy/Views/Home/pv_instructor.cshtml
+++ b/SpanishAcademy/Views/Home/pv_instructor.cshtml
@@ -16,9 +16,9 @@
         </div>
     </div>
     <div class="container-fluid p-1">
-        <div class="row no-gutters popup-gallery">
+        <div class="row no-gutters">
             <div class="col-lg-4 col-sm-6">
-                <a class="portfolio-box" href="~/Content/img/InstructorDavid/DavidA.jpg">
+                <a class="portfolio-box" data-toggle="modal" data-target=".david-modal-lg">
                     <img class="img-fluid" src="~/Content/img/InstructorDavid/DavidA.jpg" alt="">
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
@@ -29,8 +29,8 @@
                     </div>
                 </a>
             </div>
-            <div class="col-lg-4 col-sm-6">
-                <a class="portfolio-box" href="~/Content/img/InstructorAna/Ana.jpg">
+            <div class="col-lg-4 col-sm-6" data-toggle="modal" data-target=".ana-modal-lg">
+                <a class="portfolio-box">
                     <img class="img-fluid" src="~/Content/img/InstructorAna/Ana.jpg" alt="">
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
@@ -41,8 +41,8 @@
                     </div>
                 </a>
             </div>
-            <div class="col-lg-4 col-sm-6">
-                <a class="portfolio-box" href="~/Content/img/InstructorPablo/Pablo.jpg">
+            <div class="col-lg-4 col-sm-6" data-toggle="modal" data-target=".pablo-modal-lg">
+                <a class="portfolio-box">
                     <img class="img-fluid" src="~/Content/img/InstructorPablo/Pablo.jpg" alt="">
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
