--- a/SpanishAcademy/Views/Home/pv_place.cshtml
+++ b/SpanishAcademy/Views/Home/pv_place.cshtml
@@ -8,46 +8,20 @@
         </div>
         <div class="row">
             <div class="col-lg-8 mx-auto text-center">
+                @*<div class="google-maps">
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3875.8905813853953!2d100.56202711440818!3d13.725073801611071!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x30e29f04d08a8f07%3A0x4938e65c54a1bd67!2sAguston+Sukhumvit+22!5e0!3m2!1sen!2sth!4v1522570187840" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+                </div>*@
+                <br />
+                <a class="jumbotron-fluid" href="https://goo.gl/maps/uwokfvBa6K52">
+                    <button type="button" class="btn btn-dark btn-lg">Open in other apps</button>
+                </a>
+                <br />
                 <p class="mb-4">Our academy del esponol is located at The horizon, community mall only 2-minute walk from Ekamai station. You can find our lively class with green environment on 2nd floor.</p>
                 <p class="mb-4">For Private class, it can be done at your place or appointed place outside the academy.</p>
             </div>
         </div>
     </div>
     <div class="container-fluid p-1">
-        <div class="row no-gutters popup-gallery">
-            <div class="col-lg-4 col-sm-6">
-                <a class="portfolio-box" href="~/Content/img/MainPicture/n1.jpg">
-                    <img class="img-fluid" src="~/Content/img/MainPicture/n1.jpg" alt="">
-                    <div class="portfolio-box-caption">
-                        <div class="portfolio-box-caption-content">
-                            <div class="project-category text-faded">
-                            </div>
-                        </div>
-                    </div>
-                </a>
-            </div>
-            <div class="col-lg-4 col-sm-6">
-                <a class="portfolio-box" href="~/Content/img/MainPicture/n2.jpg">
-                    <img class="img-fluid" src="~/Content/img/MainPicture/n2.jpg" alt="">
-                    <div class="portfolio-box-caption">
-                        <div class="portfolio-box-caption-content">
-                            <div class="project-category text-faded">
-                            </div>
-                        </div>
-                    </div>
-                </a>
-            </div>
-            <div class="col-lg-4 col-sm-6">
-                <a class="portfolio-box" href="~/Content/img/MainPicture/n3.jpg">
-                    <img class="img-fluid" src="~/Content/img/MainPicture/n3.jpg" alt="">
-                    <div class="portfolio-box-caption">
-                        <div class="portfolio-box-caption-content">
-                            <div class="project-category text-faded">
-                            </div>
-                        </div>
-                    </div>
-                </a>
-            </div>
-        </div>
+
     </div>
 </section>
