--- a/SpanishAcademy/Views/Home/pv_student.cshtml
+++ b/SpanishAcademy/Views/Home/pv_student.cshtml
@@ -15,22 +15,53 @@
     </div>
     <div class="container-fluid p-1">
 
-        <div class="row no-gutters popup-gallery">
+        <div class="row no-gutters">
             <div class="col-lg-4 col-sm-6">
-                <a class="portfolio-box" href="~/Content/img/Student/StudentA.jpg">
-                    <img class="img-fluid" src="~/Content/img/Student/StudentA.jpg" alt="">
-                </a>
-            </div>
-            <div class="col-lg-4 col-sm-6">
-                <a class="portfolio-box" href="~/Content/img/Student/StudentB.jpg">
+                <a class="portfolio-box">
                     <img class="img-fluid" src="~/Content/img/Student/StudentB.jpg" alt="">
                 </a>
             </div>
             <div class="col-lg-4 col-sm-6">
-                <a class="portfolio-box" href="~/Content/img/Student/StudentC.jpg">
+                <a class="portfolio-box">
+                    <img class="img-fluid" src="~/Content/img/Student/FeedBackA.jpg" alt="">
+                </a>
+            </div>
+            <div class="col-lg-4 col-sm-6">
+                <a class="portfolio-box">
                     <img class="img-fluid" src="~/Content/img/Student/StudentC.jpg" alt="">
                 </a>
             </div>
+            <div class="col-lg-4 col-sm-6">
+                <a class="portfolio-box">
+                    <img class="img-fluid" src="~/Content/img/Student/FeedBackD.jpg" alt="">
+                </a>
+            </div>
+            <div class="col-lg-4 col-sm-6">
+                <a class="portfolio-box">
+                    <img class="img-fluid" src="~/Content/img/Student/StudentD.jpg" alt="">
+                </a>
+            </div>
+            <div class="col-lg-4 col-sm-6">
+                <a class="portfolio-box">
+                    <img class="img-fluid" src="~/Content/img/Student/FeedBackC.jpg" alt="">
+                </a>
+            </div>
+            <div class="col-lg-4 col-sm-6">
+                <a class="portfolio-box">
+                    <img class="img-fluid" src="~/Content/img/Student/FeedBackE.jpg" alt="">
+                </a>
+            </div>
+            <div class="col-lg-4 col-sm-6">
+                <a class="portfolio-box">
+                    <img class="img-fluid" src="~/Content/img/Student/StudentE.jpg" alt="">
+                </a>
+            </div>
+            <div class="col-lg-4 col-sm-6">
+                <a class="portfolio-box">
+                    <img class="img-fluid" src="~/Content/img/Student/FeedBackB.jpg" alt="">
+                </a>
+            </div>
+
         </div>
     </div>
 </section>
