--- a/SpanishAcademy/Views/Home/Index.cshtml
+++ b/SpanishAcademy/Views/Home/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿<!-- Navigation -->
-<nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
+<nav class="navbar navbar-expand navbar-light fixed-top" id="mainNav">
     <div class="container">
         <img style="height:3em;padding-right:2em" src="~/Content/img/logo_academyDelEspanol_minified.png" />
         <a class="navbar-brand js-scroll-trigger" href="#page-top">Academy del Español</a>
@@ -74,5 +74,10 @@
 
 @Html.Partial("pv_dele")
 
+@* == Instructors == *@
+
+@Html.Partial("pv_david")
+@Html.Partial("pv_ana")
+@Html.Partial("pv_pablo")
 
 
