--- a/SpanishAcademy/Views/Home/pv_contact.cshtml
+++ b/SpanishAcademy/Views/Home/pv_contact.cshtml
@@ -8,17 +8,10 @@
         </div>
     </div>
     <div class="container-fluid p-1">
-        <div class="row no-gutters popup-gallery">
+        <div class="row no-gutters">
             <div class="col-lg-12">
-                <a class="portfolio-box" href="~/Content/img/ContactPage/ContactPage.jpg">
+                <a class="portfolio-box">
                     <img class="img-fluid" src="~/Content/img/ContactPage/ContactPage.jpg" alt="">
-                    <div class="portfolio-box-caption">
-                        <div class="portfolio-box-caption-content">
-                            <div class="project-category text-faded">
-                                Teacher David (Madrid, Spain)
-                            </div>
-                        </div>
-                    </div>
                     <br />
                 </a>
             </div>
