Fix bugs and layout. remove overflow + js check overflow.

--- a/SpanishAcademy/Views/Home/Contact.cshtml
+++ b/SpanishAcademy/Views/Home/Contact.cshtml
@@ -21,3 +21,19 @@
         </address>
     </div>
 </div>
+<div class="row">
+    <div class="col-lg-4 ml-auto text-center">
+        <i class="fa fa-phone fa-3x mb-3 sr-contact"></i>
+        <p><span class="text-yellow">Spanish/English</span>+66-40-940-923</p>
+        <p><span class="text-yellow">Thai/Chinese</span>+66-86-977-1070</p>
+    </div>
+    <div class="col-lg-4 mr-auto text-center">
+        <i class="fa fa-envelope-o fa-3x mb-3 sr-contact"></i>
+        <p>
+            <a href="mailto:your-email@your-domain.com">insert-your-email@here.com</a>
+        </p>
+        <p>
+            <a href="mailto:your-email@your-domain.com">Line-id</a>
+        </p>
+    </div>
+</div>
