--- a/SpanishAcademy/Views/Home/Index.cshtml
+++ b/SpanishAcademy/Views/Home/Index.cshtml
@@ -27,7 +27,7 @@
                     <a class="nav-link js-scroll-trigger" href="#contact">Contact</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link js-scroll-trigger" href="#More">
+                    <a class="nav-link js-scroll-trigger" href="#more">
                         More On Spanish
                     </a>
                 </li>
@@ -81,3 +81,4 @@
 @Html.Partial("pv_pablo")
 
 
+@Html.Partial("pv_more")
