--- a/SpanishAcademy/Views/Home/pv_group.cshtml
+++ b/SpanishAcademy/Views/Home/pv_group.cshtml
@@ -26,6 +26,9 @@
                             <i class="fa fa-3x fa-child text-primary mb-3"></i>
                             <h6 class="mb-3"> Beginner </h6>
                             <p class="text-muted small mb-0">A general basic ability to communicate in a limited number of the most familiar situations in everyday life.</p>
+                            <p class="text-red small mb-3">
+                                300 Baht per hour
+                            </p>
                         </div>
                     </div>
                     <div class="col-lg-3 col-md-6 text-center">
@@ -33,6 +36,9 @@
                             <i class="fa fa-3x fa-paper-plane text-primary mb-3"></i>
                             <h6 class="mb-3"> Intermediate </h6>
                             <p class="text-muted small mb-0">Users are able to handle the main structures of the language include communication in social situations.</p>
+                            <p class="text-red small mb-3">
+                                300 Baht per hour
+                            </p>
                         </div>
                     </div>
                     <div class="col-lg-3 col-md-6 text-center">
@@ -40,6 +46,9 @@
                             <i class="fa fa-3x fa-newspaper-o text-primary mb-3"></i>
                             <h6 class="mb-3"> Advance </h6>
                             <p class="text-muted small mb-0">Approaching the linguistic competence of an educated native speaker.</p>
+                            <p class="text-red small mb-3">
+                                300 Baht per hour
+                            </p>
                         </div>
                     </div>
                     <div class="col-lg-3 col-md-6 text-center">
@@ -47,7 +56,10 @@
                             <i class="fa fa-3x fa-diamond text-primary mb-3"></i>
                             <h6 class="mb-3"> Master </h6>
                             <p class="text-muted small mb-0">Fine tune areas of specialization such as professional or literary use of Spanish.</p>
-                        </div>
+                            <p class="text-red small mb-3">
+                                300 Baht per hour
+                            </p>
+                         </div>
                     </div>
                 </div>
             </div>
