--- a/SpanishAcademy/Views/Home/pv_special.cshtml
+++ b/SpanishAcademy/Views/Home/pv_special.cshtml
@@ -10,6 +10,9 @@
                     For those students that are studing the International General Certificate of Secondary Education from Cambridge or the
                     International Baccalaureate we develop the programm that best fit their needs for suscess in their examinations.
                 </p>
+                <h6 class="text-red mb-3">
+                    Call for details.
+                </h6>
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
