--- a/SpanishAcademy/Views/Shared/_Layout.cshtml
+++ b/SpanishAcademy/Views/Shared/_Layout.cshtml
@@ -69,6 +69,17 @@
             });
         });
 
+        var docWidth = document.documentElement.offsetWidth;
+
+        [].forEach.call(
+          document.querySelectorAll('*'),
+          function (el) {
+              if (el.offsetWidth > docWidth) {
+                  console.log(el);
+              }
+          }
+        );
+
         function show(param_div_id) {
             var viewportWidth = $(window).width();
 
