--- a/SpanishAcademy/Views/Home/pv_contact.cshtml
+++ b/SpanishAcademy/Views/Home/pv_contact.cshtml
@@ -16,21 +16,34 @@
                 </a>
             </div>
         </div>
-        <br />
-        <div class="row">
-            <div class="col-lg-4 ml-auto text-center">
-                <i class="fa fa-phone fa-3x mb-3 sr-contact"></i>
-                <p><span class="text-yellow">Spanish/English</span>+66-40-940-923</p>
-                <p><span class="text-yellow">Thai/Chinese</span>+66-86-977-1070</p>
-            </div>
-            <div class="col-lg-4 mr-auto text-center">
-                <i class="fa fa-envelope-o fa-3x mb-3 sr-contact"></i>
-                <p>
-                    <a href="mailto:your-email@your-domain.com">insert-your-email@here.com</a>
-                </p>
-                <p>
-                    <a href="mailto:your-email@your-domain.com">Line-id</a>
-                </p>
+        <div class="container">
+            <div class="row">
+                <div class="col-md-2">
+
+                </div>
+                <div class="col-md-4 text-center">
+                    <p>
+                        <br />
+                        <i class="fa fa-phone fa-3x mb-3"></i>
+                        <br />
+                        <span class="text-yellow">Spanish/English</span>+66-40-940-923
+                        <br />
+                        <span class="text-yellow">Thai/Chinese</span>+66-86-977-1070
+                    </p>
+                </div>
+                <div class="col-md-4 text-center">
+                    <p>
+                        <br />
+                        <i class="fa fa-envelope-o fa-3x mb-3"></i>
+                        <br />
+                        <a href="mailto:Academaidelespanol@gmail.com">Academaidelespanol@gmail.com</a>
+                        <br />
+                        <a href="#here">Line-id :: Davidmg88</a>
+                    </p>
+                </div>
+                <div class="col-md-2">
+
+                </div>
             </div>
         </div>
     </div>
