last update - Apr 1 2018

--- a/SpanishAcademy/Views/Home/pv_place.cshtml
+++ b/SpanishAcademy/Views/Home/pv_place.cshtml
@@ -21,7 +21,7 @@
         <div class="row">
             <div class="col-lg-8 mx-auto text-center">
                 <p class="mb-4">
-                    • Aguston 22 (Prompong bts station free shuttle bus to destination (3 mins) (Photos of the private room)
+                    • Aguston 22 (Prompong bts station free shuttle bus to destination (3 mins)
                     <br />
                     • The Horizon ( Ekamai bts station ( 2 min's walk) -open in May 2018
                 </p>
