Filesize reduction. Fix header text and tuning layouts. Insert "Call for prices" tag

--- a/SpanishAcademy/Views/Home/Index.cshtml
+++ b/SpanishAcademy/Views/Home/Index.cshtml
@@ -39,9 +39,11 @@
     <div class="container my-auto">
         <div class="row">
             <div class="col-lg-10 mx-auto">
-                <h3 class="text-uppercase text-red">
-                    <strong>To be a world citizen nowadays, we have to keep pushing our skill beyond the boundary.</strong>
-                </h3>
+                <div class="div-fade text-yellow">
+                    <h3 class="text-uppercase pb-3">
+                        <strong>To be a world citizen nowadays, we have to keep pushing our skill beyond the boundary.</strong>
+                    </h3>
+                </div>
                 <hr>
             </div>
             <div class="col-lg-8 mx-auto div-fade text-yellow">
