--- a/SpanishAcademy/Views/Home/pv_exam.cshtml
+++ b/SpanishAcademy/Views/Home/pv_exam.cshtml
@@ -8,8 +8,7 @@
                 <p>
                     Diplomas of Spanish as a Foreign Language (DELE) are official titles certifying degree of competence and mastery of the
                     Spanish language, granted by the Ministry of Education, Culture and Sport of Spain.
-                </p>
-                <p>
+                    <br />
                     The Instituto Cervantes organizes examination sessions, while the Universidad de Salamanca in Spain designs the exams,
                     and is in charge of corrections and the final evaluation of all exams.
                 </p>
@@ -34,7 +33,10 @@
                     <div class="col-lg-2 col-sm-6 text-center">
                         <a class="portfolio-box" onclick="show('A1')">
                             <i class="fa fa-3x fa-paper-plane text-primary mb-3"></i>
-                            <p class="small">Level A1</p><p class="small">(Breakthrough)</p>
+                            <p class="small">Level A1<br />(Breakthrough)</p>
+                            <h3 class="text-red small mb-3">
+                                Call for details.
+                            </h3>
                             <div class="portfolio-box-caption">
                                 <div class="portfolio-box-caption-content">
                                     <div class="project-category text-faded">
@@ -63,7 +65,10 @@
                     <div class="col-lg-2 col-sm-6 text-center">
                         <a class="portfolio-box" onclick="show('A2')">
                             <i class="fa fa-3x fa-bicycle text-primary mb-3"></i>
-                            <p class="small">Level A2</p><p class="small">(Waystage)</p>
+                            <p class="small">Level A2<br />(Waystage)</p>
+                            <h3 class="text-red small mb-3">
+                                Call for details.
+                            </h3>
                             <div class="portfolio-box-caption">
                                 <div class="portfolio-box-caption-content">
                                     <div class="project-category text-faded">
@@ -91,7 +96,10 @@
                     <div class="col-lg-2 col-sm-6 text-center">
                         <a class="portfolio-box" onclick="show('B1')">
                             <i class="fa fa-3x fa-car text-primary mb-3"></i>
-                            <p class="small">Level B1</p><p class="small">(Threshold)</p>
+                            <p class="small">Level B1<br />(Threshold)</p>
+                            <h3 class="text-red small mb-3">
+                                Call for details.
+                            </h3>
                             <div class="portfolio-box-caption">
                                 <div class="portfolio-box-caption-content">
                                     <div class="project-category text-faded">
@@ -116,7 +124,10 @@
                     <div class="col-lg-2 col-sm-6 text-center">
                         <a class="portfolio-box" onclick="show('B2')">
                             <i class="fa fa-3x fa-train text-primary mb-3"></i>
-                            <p class="small">Level B2</p><p class="small">(Vantage)</p>
+                            <p class="small">Level B2<br />(Vantage)</p>
+                            <h3 class="text-red small mb-3">
+                                Call for details.
+                            </h3>
                             <div class="portfolio-box-caption">
                                 <div class="portfolio-box-caption-content">
                                     <div class="project-category text-faded">
@@ -144,7 +155,10 @@
                     <div class="col-lg-2 col-sm-6 text-center">
                         <a class="portfolio-box" onclick="show('C1')">
                             <i class="fa fa-3x fa-plane text-primary mb-3"></i>
-                            <p class="small">Level C1</p><p class="small">(Effective Operational Proficiency)</p>
+                            <p class="small">Level C1<br />(Effective Operational Proficiency)</p>
+                            <h3 class="text-red small mb-3">
+                                Call for details.
+                            </h3>
                             <div class="portfolio-box-caption">
                                 <div class="portfolio-box-caption-content">
                                     <div class="project-category text-faded">
@@ -169,7 +183,10 @@
                     <div class="col-lg-2 col-sm-6 text-center">
                         <a class="portfolio-box" onclick="show('C2')">
                             <i class="fa fa-3x fa-rocket text-primary mb-3"></i>
-                            <p class="small">Level C2</p><p class="small">(Mastery)</p>
+                            <p class="small">Level C2<br />(Mastery)</p>
+                            <h3 class="text-red small mb-3">
+                                Call for details.
+                            </h3>
                             <div class="portfolio-box-caption">
                                 <div class="portfolio-box-caption-content">
                                     <div class="project-category text-faded">
