--- a/SpanishAcademy/Views/Home/pv_ana.cshtml
+++ b/SpanishAcademy/Views/Home/pv_ana.cshtml
@@ -5,7 +5,9 @@
                 <h5 class="modal-title text-red" id="instructor-ana">About Ana</h5>
             </div>
             <div class="modal-body small">
-                <img class="img-fluid" src="~/Content/img/InstructorAna/Ana.jpg" alt="">
+                <div class="col-md-6 mx-auto">
+                    <img class="img-fluid" src="~/Content/img/InstructorAna/Ana.jpg" alt="">
+                </div>
                 <hr />
                 <p>
                     I am a native spanish from Valencia (Spain), currently living in Bangkok. I am a certified spanish instructor, and have been
