--- a/SpanishAcademy/Views/Home/pv_company.cshtml
+++ b/SpanishAcademy/Views/Home/pv_company.cshtml
@@ -35,7 +35,7 @@
                         <div class="service-box mx-auto">
                             <i class="fa fa-3x fa-child text-primary mb-3"></i>
                             <h6 class="mb-3"> Beginner </h6>
-                            <p class="text-muted small mb-0">A general basic ability to communicate in a limited number of the most familiar situations in everyday life.</p>
+                            <p class="text-muted small">A general basic ability to communicate in a limited number of the most familiar situations in everyday life.</p>
                             <h3 class="text-red small mb-3">
                                 Call for details.
                             </h3>
@@ -45,7 +45,7 @@
                         <div class="service-box mx-auto">
                             <i class="fa fa-3x fa-paper-plane text-primary mb-3"></i>
                             <h6 class="mb-3"> Intermediate </h6>
-                            <p class="text-muted small mb-0">Users are able to handle the main structures of the language include communication in social situations.</p>
+                            <p class="text-muted small">Users are able to handle the main structures of the language include communication in social situations.</p>
                             <h3 class="text-red small mb-3">
                                 Call for details.
                             </h3>                        
@@ -55,7 +55,7 @@
                         <div class="service-box mx-auto">
                             <i class="fa fa-3x fa-newspaper-o text-primary mb-3"></i>
                             <h6 class="mb-3"> Advance </h6>
-                            <p class="text-muted small mb-0">Approaching the linguistic competence of an educated native speaker.</p>
+                            <p class="text-muted small">Approaching the linguistic competence of an educated native speaker.</p>
                             <h3 class="text-red small mb-3">
                                 Call for details.
                             </h3>
@@ -65,7 +65,7 @@
                         <div class="service-box mx-auto">
                             <i class="fa fa-3x fa-diamond text-primary mb-3"></i>
                             <h6 class="mb-3"> Master </h6>
-                            <p class="text-muted small mb-0">Fine tune areas of specialization such as professional or literary use of Spanish.</p>
+                            <p class="text-muted small">Fine tune areas of specialization such as professional or literary use of Spanish.</p>
                             <h3 class="text-red small mb-3">
                                 Call for details.
                             </h3>
