--- a/SpanishAcademy/Views/Home/pv_more.cshtml
+++ b/SpanishAcademy/Views/Home/pv_more.cshtml
@@ -19,17 +19,15 @@
             </div>
         </div>
         <div class="row">
-            <div class="col-lg-12 text-center">
+            <div class="col-lg-10 mx-auto text-center">
                 <h4>Spanish Origins:</h4>
                 <p class="text-center">
                     It comes from latin like other languages as portuguese, italian, french or english.
-                    <br />
                     After studing it you will be able to understand much better other languages like the Portugese, French or the Italian.
                     The Instituto Cervantes is the public institution created by Spain in 1991 to promote universally the teaching, study and use
                     of Spanish.
                     <br />
                     It's established in 87 centers distributed in 44 countries across five continents.
-                    <br />
                     Spanish is spoken by 350 million people around the world and is currently the 3th most important language worldwide.
                     There are 21 countries where Spanish it's spoken as the first language and is the second language in many others as USA.
                 </p>
