--- a/SpanishAcademy/Views/Home/pv_pablo.cshtml
+++ b/SpanishAcademy/Views/Home/pv_pablo.cshtml
@@ -5,7 +5,9 @@
                 <h5 class="modal-title text-red" id="instructor-pablo">About Pablo</h5>
             </div>
             <div class="modal-body small">
-                <img class="img-fluid" src="~/Content/img/InstructorPablo/Pablo.jpg" alt="">
+                <div class="col-md-6 mx-auto">
+                    <img class="img-fluid" src="~/Content/img/InstructorPablo/Pablo.jpg" alt="">
+                </div>
                 <hr />
                 <p>
                     Hello!
