--- a/SpanishAcademy/Views/Shared/_Layout.cshtml
+++ b/SpanishAcademy/Views/Shared/_Layout.cshtml
@@ -84,6 +84,7 @@
             var viewportWidth = $(window).width();
 
             if (viewportWidth < 768) {
+                document.getElementById('class-level').style.display = "none";
                 document.getElementById('A1').style.display = "none";
                 document.getElementById('A2').style.display = "none";
                 document.getElementById('B1').style.display = "none";
