--- a/SpanishAcademy/Views/Home/Index.cshtml
+++ b/SpanishAcademy/Views/Home/Index.cshtml
@@ -1,8 +1,8 @@
 ﻿<!-- Navigation -->
-<nav class="navbar navbar-expand navbar-light fixed-top" id="mainNav">
+<nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
     <div class="container">
         <img style="height:3em;padding-right:2em" src="~/Content/img/logo_academyDelEspanol_minified.png" />
-        <a class="navbar-brand js-scroll-trigger" href="#page-top">Academy del Español</a>
+        <a class="navbar-brand js-scroll-trigger hidden-sm-down" href="#page-top">Academy del Español</a>
         <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
