--- a/SpanishAcademy/Views/Home/pv_services.cshtml
+++ b/SpanishAcademy/Views/Home/pv_services.cshtml
@@ -113,7 +113,7 @@
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
                             <div class="project-category text-faded small">
-                                Official Exam preparation (D.E.L.E.)
+                                D.E.L.E. Exam preparation 
                             </div>
                             <div class="project-name">
                             </div>
