Fix for dotnet 4.5.2, minor changes

--- a/SpanishAcademy/Views/Home/pv_contact.cshtml
+++ b/SpanishAcademy/Views/Home/pv_contact.cshtml
@@ -24,17 +24,17 @@
                 <div class="col-md-4 text-center">
                     <p>
                         <br />
-                        <i class="fa fa-phone fa-3x mb-3"></i>
+                        <i class="fa fa-phone fa-3x mb-3 text-red"></i>
                         <br />
-                        <span class="text-yellow">Spanish/English</span>+66-40-940-923
+                        <span class="text-red">Spanish/English</span>+66-40-940-923
                         <br />
-                        <span class="text-yellow">Thai/Chinese</span>+66-86-977-1070
+                        <span class="text-red">Thai/Chinese</span>+66-86-977-1070
                     </p>
                 </div>
                 <div class="col-md-4 text-center">
                     <p>
                         <br />
-                        <i class="fa fa-envelope-o fa-3x mb-3"></i>
+                        <i class="fa fa-envelope-o fa-3x mb-3 text-red"></i>
                         <br />
                         <a href="mailto:Academaidelespanol@gmail.com">Academaidelespanol@gmail.com</a>
                         <br />
