--- a/SpanishAcademy/Views/Home/pv_classes.cshtml
+++ b/SpanishAcademy/Views/Home/pv_classes.cshtml
@@ -1,9 +1,9 @@
-﻿<section class="bg-yellow text-red" id="classes">
+﻿<section class="bg-yellow" id="classes">
     <div class="container text-center">
         <h2 class="mb-4">Spanish Group Classes : Coming Classes</h2>
-        <hr class="my-4">
+        <hr class="border-dark">
         <table id="class-table" class="table table-hover table-sm" cellspacing="0" cellpadding="0" style="border-color:black">
-            <thead class="bg-primary text-yellow">
+            <thead class="">
                 <tr>
                     <th class="border-dark">Date</th>
                     <th class="border-dark">Day</th>
