--- a/SpanishAcademy/Views/Home/pv_instructor.cshtml
+++ b/SpanishAcademy/Views/Home/pv_instructor.cshtml
@@ -1,9 +1,9 @@
-﻿<section class="bg-yellow text-red" id="instructor">
+﻿<section class="bg-yellow" id="instructor">
     <div class="container">
         <div class="row">
             <div class="col-lg-12 text-center">
                 <h2 class="mb-4">Our instructors</h2>
-                <hr class="my-4">
+                <hr class="border-dark">
             </div>
         </div>
         <div class="row">
