--- a/SpanishAcademy/Views/Home/pv_place.cshtml
+++ b/SpanishAcademy/Views/Home/pv_place.cshtml
@@ -6,6 +6,15 @@
                 <hr class="light">
             </div>
         </div>
+        <div class="row no-gutters">
+            <div class="col-lg-12">
+                <a class="portfolio-box">
+                    <img class="img-fluid" src="~/Content/img/Places/PlaceA.jpg" alt="">
+                    <br />
+                </a>
+            </div>
+        </div>
+        <br />
         <div class="row">
             <div class="col-lg-8 mx-auto text-center">
                 <div class="google-maps">
