--- a/SpanishAcademy/Content/css/creative.css
+++ b/SpanishAcademy/Content/css/creative.css
@@ -148,8 +148,8 @@ body {
 
 @media (min-width: 992px) {
     #mainNav {
-        border-color: transparent;
-        background-color: transparent;
+        /*border-color: transparent;
+        background-color: transparent;*/
     }
 
         #mainNav .navbar-brand {
@@ -204,7 +204,7 @@ header.masthead {
     padding-top: 10rem;
     padding-bottom: calc(10rem - 56px);
     background-image: url("../img/header.jpg");
-    background-position: center center;
+    background-position: center top;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
