--- a/SpanishAcademy/Views/Home/Index.cshtml
+++ b/SpanishAcademy/Views/Home/Index.cshtml
@@ -37,19 +37,19 @@
 </nav>
 <header class="masthead text-center text-white d-flex">
     <div class="container my-auto">
-        <div class="row">
-            <div class="col-lg-10 mx-auto">
+        <div class="row" style="transform: translateY(75%);">
+            <div class="col-lg-10 mx-auto py-5">
                 <div class="div-fade text-yellow">
                     <h3 class="text-uppercase pb-3">
-                        <strong>To be a world citizen nowadays, we have to keep pushing our skill beyond the boundary.</strong>
+                        <strong>Study Spanish with Spanish teacher.</strong>
                     </h3>
                 </div>
                 <hr>
             </div>
-            <div class="col-lg-8 mx-auto div-fade text-yellow">
+            @*<div class="col-lg-8 mx-auto div-fade text-yellow">
                 <p class="mb-4">Academy del Espanol aims to be the center where participants can immerse themselves in the language and culture as part of the learning process.</p>
                 <p class="mb-4">With lively and professional vibe, our Madrid-born founder has passionately distributed the love of teaching with students in Thailand for more than 4 years.</p>
-            </div>
+            </div>*@
         </div>
     </div>
 </header>
