--- a/SpanishAcademy/Content/css/creative.css
+++ b/SpanishAcademy/Content/css/creative.css
@@ -168,12 +168,12 @@ body {
 
             #mainNav .navbar-nav > li.nav-item > a.nav-link,
             #mainNav .navbar-nav > li.nav-item > a.nav-link:focus {
-                color: rgba(255, 255, 255, 0.7);
+                color: #000;
             }
 
                 #mainNav .navbar-nav > li.nav-item > a.nav-link:hover,
                 #mainNav .navbar-nav > li.nav-item > a.nav-link:focus:hover {
-                    color: #ffc400;
+                    color: #c60b1e;
                 }
 
         #mainNav.navbar-shrink {
@@ -269,7 +269,7 @@ header.masthead {
         height: 100%;
         text-align: center;
         opacity: 1;
-        color: #ffc400;
+        color: #c60b1e;
         /*background: rgba(240, 95, 64, 0.9);*/
         -webkit-transition: all 0.2s;
         -moz-transition: all 0.2s;
