--- a/SpanishAcademy/Views/Home/pv_instructor.cshtml
+++ b/SpanishAcademy/Views/Home/pv_instructor.cshtml
@@ -8,7 +8,7 @@
         </div>
         <div class="row">
             <div class="col-lg-10 mx-auto">
-                <p class="mb-4 text-center">only native Spanish speakers. They are carefully selected based on their academic qualification, experience and personality. Our language instructors are experienced and certified to teach Spanish a s a foreign language.</p>
+                <p class="mb-4 text-center">Only native Spanish speakers. They are carefully selected based on their academic qualification, experience and personality. Our language instructors are experienced and certified to teach Spanish a s a foreign language.</p>
                 <p class="mb-4 text-center">They will guide you though the learning objectives effectively through various activities to maximize your potential. Our language instructors are not only highly qualified, but stimulating and dynamic.</p>
                 @*<a class="btn btn-primary btn-xl js-scroll-trigger" href="#about">Find Out More</a>*@
 
@@ -18,7 +18,7 @@
     <div class="container-fluid p-1">
         <div class="row no-gutters">
             <div class="col-lg-4 col-sm-6">
-                <a class="portfolio-box" data-toggle="modal" data-target=".david-modal-lg">
+                <a href="#" class="portfolio-box" data-toggle="modal" data-target=".david-modal-lg">
                     <img class="img-fluid" src="~/Content/img/InstructorDavid/DavidA.jpg" alt="">
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
@@ -29,8 +29,8 @@
                     </div>
                 </a>
             </div>
-            <div class="col-lg-4 col-sm-6" data-toggle="modal" data-target=".ana-modal-lg">
-                <a class="portfolio-box">
+            <div class="col-lg-4 col-sm-6">
+                <a href="#" class="portfolio-box" data-toggle="modal" data-target=".ana-modal-lg">
                     <img class="img-fluid" src="~/Content/img/InstructorAna/Ana.jpg" alt="">
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
@@ -41,8 +41,8 @@
                     </div>
                 </a>
             </div>
-            <div class="col-lg-4 col-sm-6" data-toggle="modal" data-target=".pablo-modal-lg">
-                <a class="portfolio-box">
+            <div class="col-lg-4 col-sm-6">
+                <a href="#" class="portfolio-box" data-toggle="modal" data-target=".pablo-modal-lg">
                     <img class="img-fluid" src="~/Content/img/InstructorPablo/Pablo.jpg" alt="">
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
