--- a/SpanishAcademy/Views/Home/pv_more.cshtml
+++ b/SpanishAcademy/Views/Home/pv_more.cshtml
@@ -1,4 +1,4 @@
-﻿<section id="more">
+﻿<section class="bg-primary text-yellow" id="more">
     <div class="container">
         <div class="row">
             <div class="col-lg-12 text-center">
@@ -8,8 +8,49 @@
         </div>
     </div>
     <div class="container">
-
-        <div class="row">
+        <div class="row no-gutters">
+            <div class="col-lg-12">
+                <a class="portfolio-box" href="#" rel="noopener noreferrer" target="_blank">
+                    <img class="img-fluid" src="~/Content/img/Events/Events.jpg" alt="">
+                    <div class="portfolio-box-caption">
+                        <div class="portfolio-box-caption-content">
+                            <div class="project-category text-faded">
+                                Our Events
+                            </div>
+                        </div>
+                    </div>
+                </a>
+            </div>
+        </div>
+        <div class="row no-gutters">
+            <div class="col-lg-12">
+                <a class="portfolio-box" href="https://www.youtube.com/watch?v=87lHD5xHPTU" rel="noopener noreferrer" target="_blank">
+                    <img class="img-fluid" src="~/Content/img/Events/vIDEOS.png" alt="">
+                    <div class="portfolio-box-caption">
+                        <div class="portfolio-box-caption-content">
+                            <div class="project-category text-faded">
+                                Extra Spanish
+                            </div>
+                        </div>
+                    </div>
+                </a>
+            </div>
+        </div>
+        <div class="row no-gutters">
+            <div class="col-lg-12">
+                <a class="portfolio-box" href="http://www.enforex.com/espanol/test-gramatica.html" rel="noopener noreferrer" target="_blank">
+                    <img class="img-fluid" src="~/Content/img/Events/TestYourSkills.jpg" alt="">
+                    <div class="portfolio-box-caption">
+                        <div class="portfolio-box-caption-content">
+                            <div class="project-category text-faded">
+                                Test your skills
+                            </div>
+                        </div>
+                    </div>
+                </a>
+            </div>
+        </div>
+        @*<div class="row">
             <div class="col-lg-12 text-center">
                 <p class="text-center">
                     How much Spanish do you know?
@@ -17,9 +58,9 @@
                     <a href="http://www.enforex.com/espanol/test-gramatica.html" rel="noopener noreferrer" target="_blank">TEST YOUR LEVEL HERE</a>
                 </p>
             </div>
-        </div>
+        </div>*@
         <div class="row">
-            <div class="col-lg-10 mx-auto text-center">
+            <div class="col-lg-10 mx-auto text-center my-3">
                 <h4>Spanish Origins:</h4>
                 <p class="text-center">
                     It comes from latin like other languages as portuguese, italian, french or english.
@@ -34,5 +75,5 @@
             </div>
         </div>
     </div>
-</section>
+</sectionclass="bg-yellow">
 
