--- a/SpanishAcademy/Views/Home/pv_student.cshtml
+++ b/SpanishAcademy/Views/Home/pv_student.cshtml
@@ -14,54 +14,13 @@
         </div>
     </div>
     <div class="container-fluid p-1">
-
         <div class="row no-gutters">
-            <div class="col-lg-4 col-sm-6">
-                <a class="portfolio-box">
-                    <img class="img-fluid" src="~/Content/img/Student/StudentB.jpg" alt="">
+            <div class="col-lg-12">
+                <a class="portfolio-box" href="https://www.instagram.com/spanishacademybkk/" rel="noopener noreferrer" target="_blank">
+                    <img class="img-fluid" src="~/Content/img/Student/feedbacknew.png" alt="study spanish in bangkok">
+                    <br />
                 </a>
             </div>
-            <div class="col-lg-4 col-sm-6">
-                <a class="portfolio-box">
-                    <img class="img-fluid" src="~/Content/img/Student/FeedBackA.jpg" alt="">
-                </a>
-            </div>
-            <div class="col-lg-4 col-sm-6">
-                <a class="portfolio-box">
-                    <img class="img-fluid" src="~/Content/img/Student/StudentC.jpg" alt="">
-                </a>
-            </div>
-            <div class="col-lg-4 col-sm-6">
-                <a class="portfolio-box">
-                    <img class="img-fluid" src="~/Content/img/Student/FeedBackD.jpg" alt="">
-                </a>
-            </div>
-            <div class="col-lg-4 col-sm-6">
-                <a class="portfolio-box">
-                    <img class="img-fluid" src="~/Content/img/Student/StudentD.jpg" alt="">
-                </a>
-            </div>
-            <div class="col-lg-4 col-sm-6">
-                <a class="portfolio-box">
-                    <img class="img-fluid" src="~/Content/img/Student/FeedBackC.jpg" alt="">
-                </a>
-            </div>
-            <div class="col-lg-4 col-sm-6">
-                <a class="portfolio-box">
-                    <img class="img-fluid" src="~/Content/img/Student/FeedBackE.jpg" alt="">
-                </a>
-            </div>
-            <div class="col-lg-4 col-sm-6">
-                <a class="portfolio-box">
-                    <img class="img-fluid" src="~/Content/img/Student/StudentE.jpg" alt="">
-                </a>
-            </div>
-            <div class="col-lg-4 col-sm-6">
-                <a class="portfolio-box">
-                    <img class="img-fluid" src="~/Content/img/Student/FeedBackB.jpg" alt="">
-                </a>
-            </div>
-
         </div>
     </div>
 </section>
