--- a/SpanishAcademy/Views/Shared/_Layout.cshtml
+++ b/SpanishAcademy/Views/Shared/_Layout.cshtml
@@ -3,8 +3,8 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="">
-    <meta name="author" content="">
+    <meta name="description" content="Learn Spanish in Bangkok. เรียนภาษาสเปนกับครูสเปนในกรุงเทพ">
+    <meta name="keywords" content="เรียนภาษาสเปน, เรียนภาษา, แปลภาษาสเปน, แปลไทยเป็นสเปน, แปลสเปนเป็นไทย, ครูสเปน, สอนภาษาสเปน, รับสอนภาษาสเปน, ครูสเปนสอนภาษาสเปน, ไปเที่ยวเสปน, สอนสเปน, เรียนสเปน, ติวภาษาสเปน, สถาบันภาษาสเปน, Learn Spanish In Bangkok, สถาบันสอนภาษาสเปน, สอนภาษาสเปน, ภาษาสเปน, เรียนภาษาสเปน, เรียนสเปน, อบรมภาษาสเปน, ภาษาสเปน,โรงเรียนสอนภาษาสเปน, เรียนภาษาสเปนกับเจ้าของภาษา, คอร์ส สอน ภาษา สเปน, ภาษา สเปน สอน, เรียนภาษาสเปนที่ไหนดี pantip, เรียน พิเศษ ภาษา สเปน, เพจ สอน ภาษา สเปน, สอบภาษาสเปน , เรียนสเปนในกรุงเทพ, เรียนสเปนกับครูสเปนในกรุงเทพ, เรียนสเปนกับครูสเปนในกทม, เรียน ภาษา สเปน เพลินจิต, สถาบันภาษาและวัฒนธรรมสเปน, ภาษา สเปน สอน, รับ สมัคร อาจารย์ สอน ภาษา สเปน, เรียน พิเศษ ภาษา สเปน">
     <title>Academy del Espanol</title>
     <!-- Bootstrap core CSS -->
     <link href="/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
