--- a/SpanishAcademy/Views/Home/Index.cshtml
+++ b/SpanishAcademy/Views/Home/Index.cshtml
@@ -2,7 +2,7 @@
 <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
     <div class="container">
         <img style="height:3em;padding-right:2em" src="~/Content/img/logo_academyDelEspanol_minified.png" />
-        <a class="navbar-brand js-scroll-trigger hidden-sm-down" href="#page-top">Academy del Español</a>
+        <a class="navbar-brand js-scroll-trigger hidden-sm-down" href="#page-top">Academia del español</a>
         <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -37,11 +37,19 @@
 </nav>
 <header class="masthead text-center text-white d-flex">
     <div class="container my-auto">
-        <div class="row" style="transform: translateY(75%);">
-            <div class="col-lg-6 mx-auto div-fade text-yellow">
-                <h3 class="mb-4">Learn Spanish in Bangkok.</h3>
-                <h3 class="mb-4">เรียนภาษาเสปนกับครูสเปนในกรุงเทพ</h3>
+        <div class="row" style="transform: translateY(30%);">
+            <div class="col-lg-8 mx-auto div-fade text-yellow">
+                <h4 class="mb-4">Learn Spanish in Bangkok. <br /> เรียนภาษาสเปนกับครูสเปนในกรุงเทพ</h4>
+                <hr class="light">
+                <p class="text-faded small mb-4">
+                    Academy del Español aims to be the center where participants can immerse themselves in the language and culture as part
+                    of the learning process.
+                </p>
             </div>
+
+            @*<div class="col-lg-8 mx-auto div-fade mt-3">
+                
+            </div>*@
         </div>
     </div>
 </header>
