--- a/SpanishAcademy/Views/Home/pv_more.cshtml
+++ b/SpanishAcademy/Views/Home/pv_more.cshtml
@@ -3,12 +3,12 @@
         <div class="row">
             <div class="col-lg-12 text-center">
                 <h2 class="section-heading">More on Spanish</h2>
-                <hr class="my-4">
+                <hr class="light">
             </div>
         </div>
     </div>
     <div class="container">
-        <div class="row no-gutters">
+        <div class="row no-gutters mb-3">
             <div class="col-lg-12">
                 <a class="portfolio-box" href="#" rel="noopener noreferrer" target="_blank">
                     <img class="img-fluid" src="~/Content/img/Events/Events.jpg" alt="">
@@ -22,7 +22,16 @@
                 </a>
             </div>
         </div>
-        <div class="row no-gutters">
+        <div class="row">
+            <div class="col-lg-6 mx-auto text-center">
+                <p class="mb-4">
+                    Academia del Español is happy to organize fun events as cooking classes, fun trips, exchange students and every year we arrange enjoyable trips to Spain where you will be able to inmerse into the Spanish culture, language and it`s amazing gastronomy.
+                    <br />
+                    Join our events, have fun and practice your Spanish with other students 	around the world living in Bangkok.
+                </p>
+            </div>
+        </div>
+        <div class="row no-gutters mb-3">
             <div class="col-lg-12">
                 <a class="portfolio-box" href="https://www.youtube.com/watch?v=87lHD5xHPTU" rel="noopener noreferrer" target="_blank">
                     <img class="img-fluid" src="~/Content/img/Events/vIDEOS.png" alt="">
@@ -36,7 +45,7 @@
                 </a>
             </div>
         </div>
-        <div class="row no-gutters">
+        <div class="row no-gutters mb-3">
             <div class="col-lg-12">
                 <a class="portfolio-box" href="http://www.enforex.com/espanol/test-gramatica.html" rel="noopener noreferrer" target="_blank">
                     <img class="img-fluid" src="~/Content/img/Events/TestYourSkills.jpg" alt="">
@@ -51,29 +60,29 @@
             </div>
         </div>
         @*<div class="row">
-            <div class="col-lg-12 text-center">
-                <p class="text-center">
-                    How much Spanish do you know?
-                    <br />
-                    <a href="http://www.enforex.com/espanol/test-gramatica.html" rel="noopener noreferrer" target="_blank">TEST YOUR LEVEL HERE</a>
-                </p>
-            </div>
-        </div>*@
-        <div class="row">
-            <div class="col-lg-10 mx-auto text-center my-3">
-                <h4>Spanish Origins:</h4>
-                <p class="text-center">
-                    It comes from latin like other languages as portuguese, italian, french or english.
-                    After studing it you will be able to understand much better other languages like the Portugese, French or the Italian.
-                    The Instituto Cervantes is the public institution created by Spain in 1991 to promote universally the teaching, study and use
-                    of Spanish.
-                    <br />
-                    It's established in 87 centers distributed in 44 countries across five continents.
-                    Spanish is spoken by 350 million people around the world and is currently the 3th most important language worldwide.
-                    There are 21 countries where Spanish it's spoken as the first language and is the second language in many others as USA.
-                </p>
-            </div>
-        </div>
+                <div class="col-lg-12 text-center">
+                    <p class="text-center">
+                        How much Spanish do you know?
+                        <br />
+                        <a href="http://www.enforex.com/espanol/test-gramatica.html" rel="noopener noreferrer" target="_blank">TEST YOUR LEVEL HERE</a>
+                    </p>
+                </div>
+            </div>*@
+        @*<div class="row">
+                <div class="col-lg-10 mx-auto text-center my-3">
+                    <h4>Spanish Origins:</h4>
+                    <p class="text-center">
+                        It comes from latin like other languages as portuguese, italian, french or english.
+                        After studing it you will be able to understand much better other languages like the Portugese, French or the Italian.
+                        The Instituto Cervantes is the public institution created by Spain in 1991 to promote universally the teaching, study and use
+                        of Spanish.
+                        <br />
+                        It's established in 87 centers distributed in 44 countries across five continents.
+                        Spanish is spoken by 350 million people around the world and is currently the 3th most important language worldwide.
+                        There are 21 countries where Spanish it's spoken as the first language and is the second language in many others as USA.
+                    </p>
+                </div>
+            </div>*@
     </div>
-</sectionclass="bg-yellow">
+</section>
 
