--- a/SpanishAcademy/Views/Home/Index.cshtml
+++ b/SpanishAcademy/Views/Home/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿<!-- Navigation -->
 <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
     <div class="container">
-        <img style="height:3em;padding-right:2em" src="~/Content/img/logo_academyDelEspanol_minified.png" />
+        <img style="height:3em;padding-right:2em" src="~/Content/img/logo.png" />
         <a class="navbar-brand js-scroll-trigger hidden-sm-down" href="#page-top">Academia del español</a>
         <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -24,12 +24,12 @@
                     <a class="nav-link js-scroll-trigger" href="#instructor">Instructor</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link js-scroll-trigger" href="#contact">Contact</a>
-                </li>
-                <li class="nav-item">
                     <a class="nav-link js-scroll-trigger" href="#more">
                         More Spanish
                     </a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link js-scroll-trigger" href="#contact">Contact</a>
                 </li>
             </ul>
         </div>
@@ -48,8 +48,8 @@
             </div>
 
             @*<div class="col-lg-8 mx-auto div-fade mt-3">
-                
-            </div>*@
+
+                </div>*@
         </div>
     </div>
 </header>
